syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.andmal";
option java_outer_classname = "DataGrpcProto";

package hello;

service TransactionsGrpc {
  rpc GetTransaction (TransRequest) returns (TransReply) {}
}

message TransRequest {
  string id = 1;
}

message TransReply {
  string message = 1;
}
